# comet-contracts-v1

./: .gitignore  Cargo.toml  Makefile  README.md  futurenet_deploy.sh  rustfmt.toml
.github/workflows/: release.yml
contracts/: Cargo.toml
contracts/src/: c_consts.rs  c_consts_256.rs  c_math.rs  c_math_256.rs  c_num.rs  c_num_256.rs  lib.rs
contracts/src/c_pool/: admin.rs  allowance.rs  balance.rs  comet.rs  contract.rs  error.rs  event.rs  events.rs  metadata.rs  mod.rs  storage_types.rs  token_utility.rs
contracts/src/c_pool/call_logic/: bind.rs  finalize.rs  getter.rs  init.rs  mod.rs  pool.rs  setter.rs
contracts/src/tests/: balancer.rs  c_num_test.rs  c_num_test_256.rs  c_pool_all.rs  c_pool_dif_decimals.rs  c_pool_init.rs  c_pool_join_exit.rs  c_pool_single_sided.rs  c_pool_swap.rs  c_pool_test.rs  mod.rs  utils.rs
factory/: Cargo.toml
factory/src/: error.rs  lib.rs  test.rs
factory/src/call_logic/: factory.rs
js-contracts/: README.md  package-lock.json  package.json
js-contracts/src/: constants.ts  index.ts  invoke.ts
js-factory/: README.md  package-lock.json  package.json
js-factory/src/: constants.ts  index.ts  invoke.ts
js-token/: README.md  package-lock.json  package.json
js-token/src/: constants.ts  index.ts  invoke.ts
test_token/: Cargo.toml
test_token/src/: contract.rs
