[workspace]
resolver = "2"

members = ["contracts", "factory", "test_token"]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
version = "0.9.2"
git = "https://github.com/stellar/rs-soroban-sdk"
rev = "bfddbc380e2b23c71069bd612b89177400437a80"

[workspace.dependencies.soroban-token-sdk]
version = "0.9.2"
git = "https://github.com/stellar/rs-soroban-sdk"
rev = "bfddbc380e2b23c71069bd612b89177400437a80"

[workspace.dependencies.soroban-auth]
version = "0.9.2"
git = "https://github.com/stellar/rs-soroban-sdk"
rev = "bfddbc380e2b23c71069bd612b89177400437a80"
