[package]
name = "contracts"
description = "Comet Contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-fixed-point-math = "1.1.0"
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
sep-41-token = { version = "1.0.0", features = ["testutils"] }
